migrate menus to the new data system